--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "antd": "^5.25.4",
+    "dotenv": "^16.5.0",
     "next": "15.3.3",
     "openai": "^5.1.1",
     "react": "^19.0.0",
@@ -17,10 +18,11 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "browserify-util": "^0.12.6",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
